@@ -19,6 +19,7 @@ Changelog
  * Snippet models extending `DraftStateMixin` now automatically define a "Publish" permission type (Sage Abdullah)
  * Users now remain on the edit page after saving a snippet as draft (Sage Abdullah)
  * Base project template now populates the meta description tag from the search description field (Aman Pandey)
+ * Create `{% fullpageurl %}` for getting the absolute URL of a page (Jake Howard)
  * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
  * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
  * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
